# cuddly-eureka

./: .gitignore
archibate/parallel101/course01/12/: CMakeLists.txt  main.cpp
archibate/parallel101/course11/03_library/07/: CMakeLists.txt  mylib.cpp
archibate/parallel101/course11/04_property/04/: CMakeLists.txt  main.cpp
archibate/parallel101/course11/05_packages/02/: CMakeLists.txt  main.cpp
archibate/parallel101/course11/05_packages/04/: CMakeLists.txt  main.cpp
archibate/parallel101/course11/08_flags/02/: CMakeLists.txt  main.cpp
archibate/parallel101/course11/08_flags/03/: CMakeLists.txt  main.cpp
archibate/parallel101/course11/08_flags/09/: CMakeLists.txt
comcppac/basics/callback_functions/: example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  qsort.cpp
comcppac/basics/pre_pos_increment/: test.cpp
comcppac/eigen/cmake/: CMakeLists.txt  first_program.cpp
comcppac/gflags/test1/: CMakeLists.txt  test1.cpp
comcppac/gflags/test2/: CMakeLists.txt  control_flags.h  main.cpp
comcppac/gflags/test3/: CMakeLists.txt  control_flags.cpp  control_flags.h  main.cpp
comcppac/openframeworks/example1/: config.make
computational_arts/literatures/: weblinks.txt
gvault/cheatsheets/: markdown.md
gvault/symbolz/languages/: english_alphabet.md
scotty_meyers/effective_cpp/item01/: view_cpp_as_a_federation_of_languages.xopp
scotty_meyers/effective_cpp/item02/: prefer_consts_enums_and_inlines_to_#defines.xopp  test2.cpp
scotty_meyers/effective_cpp/item03/: dumpcode  test3.cpp  test4.cpp  test6.cpp
scotty_meyers/effective_cpp/item04/: ctest6.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp
scotty_meyers/effective_cpp/item05/: know_what_functions_cpp_silently_writes_and_calls.xopp  test1.cpp  test2.cpp
scotty_meyers/effective_cpp/item06/: explicitly_disallow_the_use_of_compiler_generated_functions_youdonotwant.xopp  test1.cpp  test3.cpp
scotty_meyers/effective_cpp/item07/: declare_destructors_virtual_in_polymorphic_base_classes.xopp  test1.cpp  test2.cpp
scotty_meyers/effective_cpp/item08/: prevent_exceptions_from_leaving_destructors.xopp  test1.cpp  test2.cpp  test3.cpp  test4.cpp
scotty_meyers/effective_cpp/item09/: never_call_virtual_functions_during_construction_or_destruction.xopp
scotty_meyers/effective_cpp/item10/: having_assignment_operator_returns_a_reference_to_*this.xopp
scotty_meyers/effective_cpp/item11/: handle_assignment_to_self_in_operator_equal.xopp
scotty_meyers/effective_cpp/item12/: copy_all_parts_of_an_object.xopp
scotty_meyers/effective_cpp/item13/: use_objects_to_manange_resources.xopp
scotty_meyers/effective_cpp/item14/: source.cpp  think_carefully_about_copying_behaviour_in_resource_managing_classes.xopp
scotty_meyers/effective_cpp/item15/: provide_access_to_raw_resources_in_resource_managing_classes.xopp
scotty_meyers/effective_cpp/item16/: use_the_same_form_In_corresponding_uses_for_new_and_delete.xopp
scotty_meyers/effective_cpp/item17/: store_newed_objects_in_smart_pointers_in_standalone_statements.xopp
scotty_meyers/effective_cpp/item18/: make_interfaces_easy_to_use_correctly_and_hard_to_use_incorrectly.xopp
scotty_meyers/effective_cpp/item19/: treat_class_design_as_type_design.xopp
scotty_meyers/effective_cpp/item2/: test1.cpp
scotty_meyers/effective_cpp/item20/: pass_by_reference_to_const_over_pass_by_value.xopp
scotty_meyers/effective_cpp/item21/: dont_tyr_to_return_a_reference_when_you_must_return_an_object.xopp
scotty_meyers/effective_cpp/item22/: declare_data_members_private.xopp
scotty_meyers/effective_cpp/item23/: prefer_nonmember_nonfriend_functions_to_member_functions.xopp
scotty_meyers/effective_cpp/item24/: declare_nonmember_funcs_when_typeconversion_should_apply_to_all_parameters.xopp
scotty_meyers/effective_cpp/item25/: consider_support_for_a_nonthrowing_swap.xopp
scotty_meyers/effective_cpp/item27/: minimize_casting.xopp
(+365 files in other folders)
